--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-    
+    <h1>Git</h1>
     <script src="/js/main.js"></script>
 </body>
 </html>
