--- a/index.html
+++ b/index.html
@@ -4,10 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="/css/font.css">
     <link rel="stylesheet" href="/css/main.css">
 </head>
-    <h1>Test</h1>
-       <script src="/js/main.js"></script>
+<body>
+    <div class="main-wrapper">
+        <header class="main-header">
+            <div class="container">
+
+            </div>
+        </header>
+        <div class="main-content">
+            <div class="hero-section">
+                <div class="container">
+                    <h1 class="headings mh1">Develop | Optimize | Maintaince</h1>
+                    <div class="sub-headings">Developing is not enough. Try to callout anyone that can built optimized and maintain your pages. Start increasing your page conversions today.</div>
+                    <a href="#">Take a look</a>
+                    <img src="" alt="featured-image">
+                </div>
+            </div>
+        </div>
+        <div class="main-footer">
+            <div class="container">
+
+            </div>
+        </div>
+    </div>
+
+    <script src="/js/main.js"></script>
 </body>
 </html>
